<resources>
    <string name="app_name">My Map</string>
    <string name="app_name2">마이맵</string>

    <string name="menu_home">홈</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_my_info">내 정보</string>

    <string name="text_sign">로그인</string>
    <string name="text_email">이메일</string>
    <string name="text_password">비밀번호</string>
    <string name="text_sign2">마이맵은 처음이신가요?</string>
    <string name="text_register">회원가입</string>

    <string name="text_alert">확진자 알림</string>
    <string name="text_correct">확진자 동선과 일치</string>

    <string name="text_cancel">취소</string>
    <string name="text_next">확인</string>

    <string name="text_gps">확진자 동선</string>

    <string name="text_my_info">MY</string>
    <string name="text_blood">혈액형</string>
    <string name="text_address">주소</string>
    <string name="text_submit">확진자 등록</string>
    <string name="text_hospital_email">병원 관계자의 이메일을 입력해주세요.</string>
</resources>